0.5.0
 * fix treatment of normal maps from mbm files

0.4.0
 * add paint bottle
 * add eva writing
 * ignore texture alpha in preview
 * add smaller font sizes
 * add multiple text directions
 * add blending options
 * add work around for active texture management

0.3.0
 * now works with mbm texture files, using Active Texture Managements MBMToTexture method
 * added search for first transform in a part with a mesh if not given a transform to use
 * if no bounding box given will now use whole texture
 * added oswald, russo one, capsmall fonts
 * fix (at least some of) the memory leaks

0.2.0 
 * Lowered texture resolution
 * Added texture selector

0.1.0
 * Initial text release