@@ -3,6 +3,7 @@
     MODULE
     {
         name = ASPTextWriter
+        useBoundingBox = true
         bottomLeftX = 18
         bottomLeftY = 196
         width = 481
@@ -15,6 +16,7 @@
     MODULE
     {
         name = ASPTextWriter
+        useBoundingBox = true
         bottomLeftX = 1
         bottomLeftY = 1
         width = 126
@@ -27,6 +29,7 @@
     MODULE
     {
         name = ASPTextWriter
+        useBoundingBox = true
         bottomLeftX = 10
         bottomLeftY = 68
         width = 1009
@@ -39,6 +42,7 @@
     MODULE
     {
         name = ASPTextWriter
+        useBoundingBox = true
         bottomLeftX = 24
         bottomLeftY = 198
         width = 473
@@ -51,6 +55,7 @@
     MODULE
     {
         name = ASPTextWriter
+        useBoundingBox = true
         bottomLeftX = 21
         bottomLeftY = 60
         width = 476
@@ -63,6 +68,7 @@
     MODULE
     {
         name = ASPTextWriter
+        useBoundingBox = true
         bottomLeftX = 12
         bottomLeftY = 337
         width = 489
@@ -75,6 +81,7 @@
     MODULE
     {
         name = ASPTextWriter
+        useBoundingBox = true
         bottomLeftX = 25
         bottomLeftY = 285
         width = 976
@@ -87,6 +94,11 @@
     MODULE
     {
         name = ASPTextWriter
+        useBoundingBox = true
+        bottomLeftX = 5
+        bottomLeftY = 43
+        width = 245
+        height = 51
     }
 }
 
